# teamspeak-plugin-radiofx-ts26

./: .gitmodules  CMakeLists.txt
src/: plugin_qt.cpp
